--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -16,11 +16,20 @@
   --font--h3--size--ipad: calc(1.4rem * 1);
   --font--a--size--ipad: calc(1.8rem * .7);
   --font--p--size--ipad: calc(1.2rem * 1);
+  /* FONT SIZE IPAD*/
+  --font--h1--size--desktop: calc(2rem * 1.2);
+  --font--h2--size--desktop: calc(1.6rem * 1.2);
+  --font--h3--size--desktop: calc(1.4rem * 1.2);
+  --font--a--size--desktop: calc(1.8rem * 1.2);
+  --font--p--size--desktop: calc(1.2rem * 1.2);
   /* PADDING */
   --padding--top--mobile: 1.5rem;
+  --padding--top--desktop: 3.5rem;
   --padding--top--text: 1.5rem;
   --padding--bottom--text: 1rem;
   --grid--gap--mobile: 1.2rem;
+  --grid--gap--desktop: 2.4rem;
+
   /* BORDER RADIUS */
   --border--radius: .3rem;
 
