--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -1,3 +1,11 @@
+.nav--desktop {
+  display: none;
+}
+
+.nav--mobile {
+  display: block;
+}
+
 nav {
   display: flex;
   align-items: center;
@@ -12,6 +20,10 @@ nav img {
 .humo--logo {
   width: 12rem;
 
+}
+
+.cart__desktop {
+  display: none;
 }
 
 .navigation__content {
@@ -62,6 +74,10 @@ nav img {
 
 @media only screen and (min-width: 768px) {
 
+  .nav--desktop {
+    display: none;
+  }
+
   .navigation__content {
     height: auto;
     box-shadow: 0 14px 28px rgba(0, 0, 0, .05), 0 10px 10px rgba(0, 0, 0, .05);
@@ -105,4 +121,45 @@ nav img {
     font-weight: 400;
 
   }
+}
+
+@media only screen and (min-width: 1280px) {
+
+
+  .cart__desktop {
+    display: block;
+  }
+
+  .cart__desktop img {
+    width: 5rem;
+  }
+
+  .nav--desktop {
+    display: block;
+    background-color: var(--secondary--color);
+    box-shadow: 0 14px 28px rgba(0, 0, 0, .05), 0 10px 10px rgba(0, 0, 0, .05);
+
+  }
+
+  .nav--mobile {
+    display: none;
+  }
+
+  .navigation__main ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .navigation__main a {
+    font-size: var(--font--a--size--desktop);
+
+  }
+
+  .navigation__second a {
+    line-height: 2rem;
+    font-size: var(--font--p--size--desktop);
+
+  }
+
 }
