--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,6 +11,7 @@
 html {
   box-sizing: inherit;
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -296,6 +297,13 @@ p {
   font-family: Oswald, sans-serif;
   font-weight: 300;
 
+}
+
+.korting {
+  grid-column: 3;
+  grid-row: 1;
+  font-family: Oswald, sans-serif;
+  font-weight: 300;
 }
 
 .update {
