--- a/src/css/longread.css
+++ b/src/css/longread.css
@@ -1,39 +1,55 @@
 @font-face {
   font-family: VELTIC;
   src:
+/* stylelint-disable */
     url('../font/VELTICRegular.woff2') format('woff2'),
     url('../font/VELTICRegular.woff') format('woff');
+/* stylelint-enable */
+
   font-weight: normal;
   font-style: normal;
 }
 
 .header {
-  height: 100vh;
   width: 100%;
+  height: 100vh;
   background-image:
-    linear-gradient(to bottom, rgba(255, 255, 255, .1), rgba(32, 33, 39, .2)),
-    url('../images/Longread/Header.jpg');
-
+    linear-gradient(to bottom, rgba(255, 255, 255, .1), rgba(04, 05, 09, .4)),
+    url('../images/Longread/Header-adjusted.jpg');
   background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
 }
 
 .longread__container {
   width: 90%;
   margin: auto;
-  height: 100%;
+  height: auto;
 }
 
 .longread__nav {
+  width: 100%;
+  height: 9rem;
+  padding-top: 1rem;
+  background-color: rgba(10, 10, 10, .6);
+  z-index: 999;
+}
+
+.nav__items {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
-  height: 6rem;
-  padding-top: 3rem;
+  width: 90%;
+  margin: auto;
 }
 
-.longread__nav a img {
+.longread__nav img {
   width: 3rem;
+  padding-top: 1rem;
 }
 
 .longread__nav a .humo {
@@ -41,34 +57,209 @@
   padding-top: 2rem;
 }
 
-.longread__title {
+.sticky {
+  position: fixed;
   width: 100%;
-  height: 50rem;
+}
+
+.nav__menu {
+  display: none;
+  width: 100%;
+  background-color: rgba(10, 10, 10, .4);
+  margin-top: 1.6rem;
+}
+
+.nav__menu a {
+  color: white;
+}
+
+.dropdown__nav ul{
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  flex-direction: column;
+  flex-direction: row;
+  width: 90%;
+  margin: auto;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
-.longread__title h1 {
+.dropdown__nav ul li {
+  padding-right: 3rem;
+}
 
-  font-size: var(--longread--h1--size);
-  font-family: VELTIC;
-  text-shadow: rgba(1, 1, 1, 1);
+.header__content {
+  width: 90%;
+  height: 8rem;
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  bottom: 0rem;
+
+}
+
+.header__content p {
   color: var(--longread--main--color);
+  width: 30%;
+  opacity: .4;
 }
 
-
-.longread__title h2 {
-
-  padding-top: var(--longread--padding--desktop);
-  font-size: var(--longread--h2--size);
-  font-family: VELTIC;
+.longread__btn {
+  color: #ffbf18;
+  -webkit-animation: animation 3000ms linear infinite both;
+  animation: animation 3000ms linear infinite both;
 }
+
+.summary {
+  width: 100%;
+  height: auto;
+  background-color: var(--longread--dark--color);
+}
+
+.summary__content {
+  height: auto;
+  width: 60%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.summary__text {
+  width: 40%;
+  height: auto;
+  padding-top: 12rem;
+  text-align: justify;
+}
+
+.summary__text p {
+  color: var(--longread--main--color);
+  opacity: .8;
+  line-height: 1.8rem;
+  font-size: var(--longread--p--size);
+}
+
 
 .introduction {
   width: 100%;
-  height: 100vh;
-  background-image: linear-gradient(to bottom, rgba(2, 3, 9, 1), rgba(32, 33, 39, 1));
+  height: 80vh;
+  background-color: var(--longread--dark--color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
+.characters {
+  width: 60%;
+  margin: auto;
+  height: 50vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.vader {
+  width: 40%;
+  height: 40rem;
+  background-image:
+    radial-gradient(rgba(10, 10, 10, .1), rgba(04, 05, 09, 1)),
+    url('../images/Longread/Vader-art.png');
+  background-size: cover;
+  background-position: right;
+  box-shadow: 0 0 200px rgba(4, 5, 9, 1) inset;
+  opacity: .6;
+  transition: .2s ease;
+
+}
+
+.zoon {
+  width: 40%;
+  height: 40rem;
+  background-image:
+    radial-gradient(rgba(10, 10, 10, .2), rgba(04, 05, 09, 1)),
+    url('../images/Longread/zoon-art.png');
+  background-size: cover;
+  background-position: center;
+  box-shadow: 0 0 200px rgba(0,0,0,0.9) inset;
+  opacity: .6;
+  transition: .2s ease;
+
+}
+
+.vader:hover {
+  opacity: 1;
+  transition: .3s ease;
+}
+
+.zoon:hover {
+  opacity: 1;
+  transition: .3s ease;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Generated with Bounce.js. Edit at http://bouncejs.com#%7Bl%3A1%2Cs%3A%5B%7BT%3A%22t%22%2Ce%3A%22s%22%2Cd%3A3000%2CD%3A0%2Cf%3A%7Bx%3A0%2Cy%3A0%7D%2Ct%3A%7Bx%3A0%2Cy%3A20%7D%2Cs%3A1%2Cb%3A10%7D%5D%7D */
+
+@-webkit-keyframes animation {
+  0% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  2.1% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 10.457, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 10.457, 0, 1); }
+  4.2% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 14.078, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 14.078, 0, 1); }
+  6.71% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 10.328, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 10.328, 0, 1); }
+  9.21% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 2.442, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 2.442, 0, 1); }
+  11.71% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -4.206, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -4.206, 0, 1); }
+  14.21% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -6.584, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -6.584, 0, 1); }
+  16.72% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -4.817, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -4.817, 0, 1); }
+  19.22% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -1.127, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -1.127, 0, 1); }
+  21.72% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1.976, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1.976, 0, 1); }
+  24.22% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 3.079, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 3.079, 0, 1); }
+  29.23% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.52, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.52, 0, 1); }
+  34.23% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -1.44, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -1.44, 0, 1); }
+  44.24% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.673, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.673, 0, 1); }
+  54.25% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -0.315, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -0.315, 0, 1); }
+  64.26% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.147, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.147, 0, 1); }
+  74.27% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -0.069, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -0.069, 0, 1); }
+  84.28% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.032, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.032, 0, 1); }
+  94.29% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -0.015, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -0.015, 0, 1); }
+  100% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+}
+
+@keyframes animation {
+  0% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  2.1% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 10.457, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 10.457, 0, 1); }
+  4.2% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 14.078, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 14.078, 0, 1); }
+  6.71% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 10.328, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 10.328, 0, 1); }
+  9.21% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 2.442, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 2.442, 0, 1); }
+  11.71% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -4.206, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -4.206, 0, 1); }
+  14.21% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -6.584, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -6.584, 0, 1); }
+  16.72% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -4.817, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -4.817, 0, 1); }
+  19.22% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -1.127, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -1.127, 0, 1); }
+  21.72% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1.976, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1.976, 0, 1); }
+  24.22% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 3.079, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 3.079, 0, 1); }
+  29.23% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.52, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.52, 0, 1); }
+  34.23% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -1.44, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -1.44, 0, 1); }
+  44.24% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.673, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.673, 0, 1); }
+  54.25% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -0.315, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -0.315, 0, 1); }
+  64.26% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.147, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.147, 0, 1); }
+  74.27% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -0.069, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -0.069, 0, 1); }
+  84.28% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.032, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0.032, 0, 1); }
+  94.29% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -0.015, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, -0.015, 0, 1); }
+  100% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
 }
