--- a/src/css/longread.css
+++ b/src/css/longread.css
@@ -1,10 +1,8 @@
 @font-face {
   font-family: VELTIC;
   src:
-/* stylelint-disable */
     url('../font/VELTICRegular.woff2') format('woff2'),
     url('../font/VELTICRegular.woff') format('woff');
-/* stylelint-enable */
 
   font-weight: normal;
   font-style: normal;
@@ -110,6 +108,13 @@
   animation: animation 3000ms linear infinite both;
 }
 
+.input__btn {
+  color: var(--longread--main--color);
+  border: 1px solid;
+  border-radius: .2rem;
+  padding: 1rem;
+}
+
 .summary__longread {
   width: 100%;
   height: auto;
@@ -122,12 +127,15 @@
   margin: auto;
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
+  padding-bottom: var(--longread--padding--desktop);
+  padding-top: 12rem;
+
 }
 
 .summary__text {
   width: 40%;
   height: auto;
-  padding-top: 12rem;
   text-align: justify;
 }
 
@@ -138,10 +146,9 @@
   font-size: var(--longread--p--size);
 }
 
-
 .introduction {
   width: 100%;
-  height: 80vh;
+  height: auto;
   background-color: var(--longread--dark--color);
   display: flex;
   justify-content: center;
@@ -151,7 +158,7 @@
 .characters {
   width: 60%;
   margin: auto;
-  height: 50vh;
+  height: auto;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -166,9 +173,23 @@
   background-size: cover;
   background-position: right;
   box-shadow: 0 0 200px rgba(4, 5, 9, 1) inset;
-  opacity: .6;
+  opacity: .8;
   transition: .2s ease;
+  position: relative;
 
+}
+
+.vader .vader__input {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background: rgba(120, 120, 120, .2);
+  border: none;
+  border-radius: .1rem;
+  padding: 1.2rem 2rem;
+  color: var(--longread--accent--color);
+  text-align: center;
 }
 
 .zoon {
@@ -180,9 +201,23 @@
   background-size: cover;
   background-position: center;
   box-shadow: 0 0 200px rgba(0,0,0,0.9) inset;
-  opacity: .6;
+  opacity: .8;
   transition: .2s ease;
+  position: relative;
 
+}
+
+.zoon .zoon__input {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background: rgba(120, 120, 120, .2);
+  border: none;
+  border-radius: .1rem;
+  padding: 1.2rem 2rem;
+  color: var(--longread--accent--color);
+  text-align: center;
 }
 
 .vader:hover {
@@ -195,6 +230,60 @@
   transition: .3s ease;
 }
 
+.name__input {
+  width: 60%;
+  margin: auto;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-top: var(--longread--padding--desktop);
+  padding-bottom: var(--longread--padding--desktop);
+  color: white;
+}
+
+.name__input p {
+  padding-bottom: 2rem;
+}
+
+.name__input input::placeholder{
+  color: #ffbf18;
+}
+
+.chapter1 {
+  width: 100%;
+  height: auto;
+  background-color: var(--longread--dark--color);
+}
+
+.chapter1 p{
+  color: var(--longread--main--color);
+}
+
+.btn {
+  color: white;
+  border: .5px solid;
+  padding: 1rem 1.2rem;
+  border-radius: .2rem;
+  opacity: .8;
+  transform: scale(0.9);
+  transition: .2s ease;
+}
+
+.btn:hover{
+  opacity: 1;
+  transform: scale(1);
+  box-shadow: .1rem .1rem 6rem rgba(200, 200, 200, .3);
+}
+
+.vader__naam{
+  color: #ffbf18;
+}
+
+.zoon__naam{
+  color: #ffbf18;
+}
 
 
 
