--- a/src/css/longread.css
+++ b/src/css/longread.css
@@ -71,7 +71,7 @@
   color: white;
 }
 
-.dropdown__nav ul{
+.dropdown__nav ul {
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -92,7 +92,7 @@
   display: flex;
   justify-content: space-between;
   position: absolute;
-  bottom: 0rem;
+  bottom: 0;
 
 }
 
@@ -123,7 +123,7 @@
 
 .summary__content {
   height: auto;
-  width: 60%;
+  width: 100%;
   margin: auto;
   display: flex;
   justify-content: space-between;
@@ -133,8 +133,14 @@
 
 }
 
+.longread__title {
+  color: white;
+  padding-bottom: 2rem;
+  opacity: 0.8;
+}
+
 .summary__text {
-  width: 40%;
+  width: 48%;
   height: auto;
   text-align: justify;
 }
@@ -173,7 +179,7 @@
   background-size: cover;
   background-position: right;
   box-shadow: 0 0 200px rgba(4, 5, 9, 1) inset;
-  opacity: .8;
+  opacity: .9;
   transition: .2s ease;
   position: relative;
 
@@ -184,12 +190,16 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  background: rgba(120, 120, 120, .2);
+  background: rgba(160, 160, 160, .1);
   border: none;
   border-radius: .1rem;
   padding: 1.2rem 2rem;
   color: var(--longread--accent--color);
   text-align: center;
+}
+
+.vader h2 {
+  color: #ffbf18;
 }
 
 .zoon {
@@ -201,7 +211,7 @@
   background-size: cover;
   background-position: center;
   box-shadow: 0 0 200px rgba(0,0,0,0.9) inset;
-  opacity: .8;
+  opacity: .9;
   transition: .2s ease;
   position: relative;
 
@@ -212,8 +222,7 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  background: rgba(120, 120, 120, .2);
-  border: none;
+  background: rgba(160, 160, 160, .1);  border: none;
   border-radius: .1rem;
   padding: 1.2rem 2rem;
   color: var(--longread--accent--color);
@@ -245,25 +254,21 @@
 
 .name__input p {
   padding-bottom: 2rem;
+  padding-top: 2rem;
+
 }
 
 .name__input input::placeholder{
   color: #ffbf18;
 }
 
-.chapter1 {
-  width: 100%;
-  height: auto;
-  background-color: var(--longread--dark--color);
-}
-
-.chapter1 p{
-  color: var(--longread--main--color);
+.name__input span {
+  font-size: 2rem;
 }
 
 .btn {
-  color: white;
-  border: .5px solid;
+  color: var(--longread--dark--color);
+  background-color: white;
   padding: 1rem 1.2rem;
   border-radius: .2rem;
   opacity: .8;
@@ -271,39 +276,171 @@
   transition: .2s ease;
 }
 
-.btn:hover{
+.btn:hover {
   opacity: 1;
   transform: scale(1);
   box-shadow: .1rem .1rem 6rem rgba(200, 200, 200, .3);
 }
 
-.vader__naam{
+.vader__naam {
   color: #ffbf18;
 }
 
-.zoon__naam{
+.zoon__naam {
   color: #ffbf18;
 }
 
+.three-images-wrapper {
+  width: 100%;
+  height: 30rem;
+  background-color: var(--longread--dark--color);
+  display: flex;
+  justify-content: flex-start;
+}
 
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: var(--longread--dark--color);
+}
 
+.image__1:hover .overlay {
+  opacity: 0.6;
+}
 
+.image__2:hover .overlay {
+  opacity: 0.6;
+}
 
+.image__3:hover .overlay {
+  opacity: 0.6;
+}
 
+.image__1 {
+  width: 33.33%;
+  height: 100%;
+  background-image:
+    radial-gradient(rgba(10, 10, 10, .1), rgba(04, 05, 09, 1)),
+    url('../images/Longread/Header-adjusted.jpg');
+  background-size: cover;
+  background-position: center;
+  -ms-transform: skew(-10deg,0deg); /* IE 9 */
+  -webkit-transform: skew(-10deg,0deg); /* Safari */
+  transform: skew(-10deg,0deg); /* Standard syntax */
 
+}
 
+.image__2 {
+  width: 33.33%;
+  height: 100%;
+  background-image:
+    radial-gradient(rgba(10, 10, 10, .1), rgba(04, 05, 09, 1)),
+    url('../images/Longread/Header-adjusted.jpg');
+  background-size: cover;
+  background-position: center;
+  -ms-transform: skew(-10deg,0deg); /* IE 9 */
+  -webkit-transform: skew(-10deg,0deg); /* Safari */
+  transform: skew(-10deg,0deg); /* Standard syntax */
 
+}
 
+.image__3 {
+  width: 33.33%;
+  height: 100%;
+  background-image:
+    radial-gradient(rgba(10, 10, 10, .1), rgba(04, 05, 09, 1)),
+    url('../images/Longread/Header-adjusted.jpg');
+  background-size: cover;
+  background-position: center;
+  -ms-transform: skew(-10deg,0deg); /* IE 9 */
+  -webkit-transform: skew(-10deg,0deg); /* Safari */
+  transform: skew(-10deg,0deg); /* Standard syntax */
 
+}
 
+.featured-image-outer {
+  position: absolute;
+  margin-left: -10%;
+  min-height: 360px;
+  overflow: hidden;
+  width: 76.5%;
+  -ms-transform: skew(-15deg,0deg); /* IE 9 */
+  -webkit-transform: skew(-15deg,0deg); /* Safari */
+  transform: skew(-15deg,0deg); /* Standard syntax */
+}
 
+.featured-image-inner {
+  background-size: cover;
+  background-position: center;
+}
 
+.featured-image-inner {
+  left: 50px;
+  position: absolute;
+  top: 0;
+  height: 360px;
+  width: 100%;
+  -ms-transform: skew(15deg,0deg); /* IE 9 */
+  -webkit-transform: skew(15deg,0deg); /* Safari */
+  transform: skew(15deg,0deg); /* Standard syntax */
+  background-size: cover;
+  background-position: center;
+}
 
+.featured-image-inner:hover {
+  cursor: pointer;
+  opacity: 0.7;
+}
 
+.content__wrapper {
+  width: 100%;
+  height: 100vh;
+  background-color: var(--longread--dark--color);
+  padding-top: var(--longread--padding--desktop);
+  padding-bottom: var(--longread--padding--desktop);
 
+}
 
+.longread__grid {
+  width: 100%;
+  height: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  grid-gap: 2.5rem;
+}
 
+.longread__grid h1{
+  color: #ffbf18;
+  font-size: 3.6rem;
+  line-height: 4.2rem;
+  font-family: VELTIC;
+  text-align: right;
 
+}
+
+.longread__grid h2{
+  color: #ffbf18;
+  font-size: var(--longread--p--size);
+  opacity: .8;
+  line-height: 1.6;
+}
+.longread__grid p {
+  color: var(--longread--main--color);
+  font-size: var(--longread--p--size);
+  opacity: .8;
+  text-align: justify;
+  color: white;
+  line-height: 2rem;
+
+}
 
 /* Generated with Bounce.js. Edit at http://bouncejs.com#%7Bl%3A1%2Cs%3A%5B%7BT%3A%22t%22%2Ce%3A%22s%22%2Cd%3A3000%2CD%3A0%2Cf%3A%7Bx%3A0%2Cy%3A0%7D%2Ct%3A%7Bx%3A0%2Cy%3A20%7D%2Cs%3A1%2Cb%3A10%7D%5D%7D */
 
