--- a/src/css/longread.css
+++ b/src/css/longread.css
@@ -129,7 +129,7 @@
   justify-content: space-between;
   align-items: flex-start;
   padding-bottom: var(--longread--padding--desktop);
-  padding-top: 12rem;
+  padding-top: var(--longread--padding--desktop);
 
 }
 
@@ -155,7 +155,8 @@
 .introduction {
   width: 100%;
   height: auto;
-  background-color: var(--longread--dark--color);
+  background-image:
+  linear-gradient(to bottom, rgba(04, 05, 09, 1), rgba(04, 05, 09, .95));
   display: flex;
   justify-content: center;
   align-items: center;
@@ -198,6 +199,16 @@
   text-align: center;
 }
 
+.vader .vader__naam{
+  position: absolute;
+  bottom: 5rem;
+  left: 0;
+  font-size: 1.8rem;
+  width: 100%;
+  text-align: center;
+
+}
+
 .vader h2 {
   color: #ffbf18;
 }
@@ -214,6 +225,16 @@
   opacity: .9;
   transition: .2s ease;
   position: relative;
+
+}
+
+.zoon .zoon__naam{
+  position: absolute;
+  bottom: 5rem;
+  left: 0;
+  font-size: 1.8rem;
+  width: 100%;
+  text-align: center;
 
 }
 
@@ -274,6 +295,8 @@
   opacity: .8;
   transform: scale(0.9);
   transition: .2s ease;
+  cursor: pointer;
+
 }
 
 .btn:hover {
@@ -290,118 +313,49 @@
   color: #ffbf18;
 }
 
-.three-images-wrapper {
+
+
+.roadmap {
   width: 100%;
-  height: 30rem;
-  background-color: var(--longread--dark--color);
-  display: flex;
-  justify-content: flex-start;
-}
-
-.overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  transition: .5s ease;
-  background-color: var(--longread--dark--color);
-}
-
-.image__1:hover .overlay {
-  opacity: 0.6;
-}
-
-.image__2:hover .overlay {
-  opacity: 0.6;
-}
-
-.image__3:hover .overlay {
-  opacity: 0.6;
-}
-
-.image__1 {
-  width: 33.33%;
-  height: 100%;
+  height: 60rem;
   background-image:
-    radial-gradient(rgba(10, 10, 10, .1), rgba(04, 05, 09, 1)),
-    url('../images/Longread/Header-adjusted.jpg');
+  radial-gradient(rgba(10, 10, 10, .2), rgba(04, 05, 09, 0.8)),
+    url('../images/Longread/road--art.jpg');
   background-size: cover;
   background-position: center;
-  -ms-transform: skew(-10deg,0deg); /* IE 9 */
-  -webkit-transform: skew(-10deg,0deg); /* Safari */
-  transform: skew(-10deg,0deg); /* Standard syntax */
+  position: relative;
 
 }
 
-.image__2 {
-  width: 33.33%;
-  height: 100%;
-  background-image:
-    radial-gradient(rgba(10, 10, 10, .1), rgba(04, 05, 09, 1)),
-    url('../images/Longread/Header-adjusted.jpg');
-  background-size: cover;
-  background-position: center;
-  -ms-transform: skew(-10deg,0deg); /* IE 9 */
-  -webkit-transform: skew(-10deg,0deg); /* Safari */
-  transform: skew(-10deg,0deg); /* Standard syntax */
-
+.roadmap .longread__title {
+  padding: 2rem;
+  color: #ffbf18;
 }
 
-.image__3 {
-  width: 33.33%;
-  height: 100%;
-  background-image:
-    radial-gradient(rgba(10, 10, 10, .1), rgba(04, 05, 09, 1)),
-    url('../images/Longread/Header-adjusted.jpg');
-  background-size: cover;
-  background-position: center;
-  -ms-transform: skew(-10deg,0deg); /* IE 9 */
-  -webkit-transform: skew(-10deg,0deg); /* Safari */
-  transform: skew(-10deg,0deg); /* Standard syntax */
-
+.btn__hoofdstuk {
+  color: var(--longread--dark--color);
+  background-color: white;
+  padding: 1rem 1.2rem;
+  border-radius: .2rem;
+  opacity: .8;
+  transition: .2s ease;
 }
 
-.featured-image-outer {
-  position: absolute;
-  margin-left: -10%;
-  min-height: 360px;
-  overflow: hidden;
-  width: 76.5%;
-  -ms-transform: skew(-15deg,0deg); /* IE 9 */
-  -webkit-transform: skew(-15deg,0deg); /* Safari */
-  transform: skew(-15deg,0deg); /* Standard syntax */
-}
-
-.featured-image-inner {
-  background-size: cover;
-  background-position: center;
-}
-
-.featured-image-inner {
-  left: 50px;
-  position: absolute;
-  top: 0;
-  height: 360px;
-  width: 100%;
-  -ms-transform: skew(15deg,0deg); /* IE 9 */
-  -webkit-transform: skew(15deg,0deg); /* Safari */
-  transform: skew(15deg,0deg); /* Standard syntax */
-  background-size: cover;
-  background-position: center;
-}
-
-.featured-image-inner:hover {
+.btn__hoofdstuk:hover{
+  opacity: 1;
+  transition: .2s ease;
   cursor: pointer;
-  opacity: 0.7;
+}
+
+.hoofdstuk2__button {
+  position: absolute;
+  top: 25rem;
+  left: 12rem;
 }
 
 .content__wrapper {
   width: 100%;
-  height: 100vh;
+  height: auto;
   background-color: var(--longread--dark--color);
   padding-top: var(--longread--padding--desktop);
   padding-bottom: var(--longread--padding--desktop);
@@ -414,7 +368,15 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: auto;
-  grid-gap: 2.5rem;
+  grid-gap: 3rem;
+}
+
+.hoofdstuk2 {
+  display: none;
+}
+
+.grid__item img {
+  width: 90%;
 }
 
 .longread__grid h1{
@@ -437,9 +399,41 @@
   font-size: var(--longread--p--size);
   opacity: .8;
   text-align: justify;
-  color: white;
-  line-height: 2rem;
+  line-height: 2.2rem;
+}
 
+.grid1 {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.grid2 {
+  grid-column: 2;
+  grid-row: 1;
+}
+
+.grid3 {
+  grid-column: 2;
+  grid-row: 2;
+}
+
+.grid4 {
+  grid-column: 1;
+  grid-row: 2;
+}
+
+.grid5 {
+  grid-column: 3;
+  grid-row: 1;
+}
+
+.grid6 {
+  grid-column: 3;
+  grid-row: 2;
+}
+
+.btn__backtomap {
+  color: white;
 }
 
 /* Generated with Bounce.js. Edit at http://bouncejs.com#%7Bl%3A1%2Cs%3A%5B%7BT%3A%22t%22%2Ce%3A%22s%22%2Cd%3A3000%2CD%3A0%2Cf%3A%7Bx%3A0%2Cy%3A0%7D%2Ct%3A%7Bx%3A0%2Cy%3A20%7D%2Cs%3A1%2Cb%3A10%7D%5D%7D */
