--- a/src/css/longread.css
+++ b/src/css/longread.css
@@ -33,7 +33,7 @@
   width: 100%;
   height: 9rem;
   padding-top: 1rem;
-  background-color: rgba(10, 10, 10, .6);
+  background-color: rgba(10, 10, 10, .4);
   z-index: 999;
 }
 
@@ -53,11 +53,6 @@
 .longread__nav a .humo {
   width: 12rem;
   padding-top: 2rem;
-}
-
-.sticky {
-  position: fixed;
-  width: 100%;
 }
 
 .nav__menu {
@@ -299,6 +294,11 @@
 
 }
 
+.orange{
+  color: white;
+  background-color: #ffbf18;
+}
+
 .btn:hover {
   opacity: 1;
   transform: scale(1);
@@ -372,7 +372,7 @@
   width: 100%;
   height: auto;
   background-color: var(--longread--dark--color);
-  padding-top: 16rem;
+  padding-top: 4rem;
   padding-bottom: var(--longread--padding--desktop);
 
 }
@@ -459,37 +459,32 @@
   color: white;
 }
 
-.quote__container {
+.buy{
   width: 100%;
-  height: auto;
-  background-image:
-    linear-gradient(to bottom, rgba(04, 05, 09, 1), rgba(04, 05, 09, .94));
+  height: 20rem;
+  background-color: var(--longread--dark--color);
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 
-.quote {
-  width: 30%;
-  height: auto;
-  text-align: center;
-  padding-bottom: var(--longread--padding--desktop);
-}
-
-.quote h1{
-  color: white;
-  padding-bottom: 1rem;
-}
-
-.quote p{
-  color: var(--longread--main--color);
-  padding-bottom: 1rem;
-
-}
-
-.quote h2{
+.buy h1{
+  padding-bottom: 2rem;
   color: #ffbf18;
+}
+
+.footer {
+  width: 100%;
+  height: 15rem;
+  background-image: url('../images/footer.png');
+  background-size: cover;
+  background-position: center;
+}
+
+.animate {
+  -webkit-animation: animation 3000ms linear infinite both;
+  animation: animation 3000ms linear infinite both;
 }
 
 /* Generated with Bounce.js. Edit at http://bouncejs.com#%7Bl%3A1%2Cs%3A%5B%7BT%3A%22t%22%2Ce%3A%22s%22%2Cd%3A3000%2CD%3A0%2Cf%3A%7Bx%3A0%2Cy%3A0%7D%2Ct%3A%7Bx%3A0%2Cy%3A20%7D%2Cs%3A1%2Cb%3A10%7D%5D%7D */
