--- a/src/css/longread.css
+++ b/src/css/longread.css
@@ -382,7 +382,7 @@
 .hoofdstuk16__button {
   position: absolute;
   top: 24rem;
-  left: 91rem;
+  left: 96rem;
 }
 
 .content__wrapper {
@@ -682,9 +682,37 @@
     position: relative;
   }
 
+  .header__content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .header__content p {
+    display: none;
+  }
+
   .summary__content {
 
-    justify-content: space-between;
+    display: block;
+  }
+
+  .summary__text {
+    width: 100%;
+    padding-top: 4rem;
+  }
+
+  .characters {
+    display: block;
+  }
+
+  .vader {
+    width: 100%;
+  }
+
+  .zoon {
+    width: 100%;
+    margin-top: 6rem;
   }
 
   .longread__grid__verhaal {
@@ -731,7 +759,7 @@
     width: 100%;
     height: auto;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-template-rows: auto;
     grid-gap: 3rem;
   }
@@ -753,28 +781,8 @@
   }
 
   .longread__grid h1 {
-    color: #ffbf18;
-    font-size: 3.6rem;
-    line-height: 4.2rem;
-    /* styelint-disable */
-    font-family: VELTIC;
-    text-align: right;
-
-  }
-
-  .longread__grid h2 {
-    color: #ffbf18;
-    font-size: var(--longread--p--size);
-    opacity: .8;
-    line-height: 1.6;
-  }
-
-  .longread__grid p {
-    color: var(--longread--main--color);
-    font-size: var(--longread--p--size);
-    opacity: .8;
-    text-align: justify;
-    line-height: 2.2rem;
+    font-size: 3.2rem;
+    text-align: center;
   }
 
   .grid1 {
@@ -783,28 +791,35 @@
   }
 
   .grid2 {
-    grid-column: 2;
-    grid-row: 1;
+    grid-column: 1;
+    grid-row: 2;
   }
 
   .grid3 {
     grid-column: 1;
-    grid-row: 2;
-  }
-
-  .grid4 {
-    grid-column: 2;
     grid-row: 3;
   }
 
+  .grid4 {
+    grid-column: 1;
+    grid-row: 4;
+  }
+
   .grid5 {
-    grid-column: 2;
-    grid-row: 2;
+    grid-column: 1;
+    grid-row: 5;
   }
 
   .grid6 {
     grid-column: 1;
-    grid-row: 3;
+    grid-row: 6;
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+  }
+
+  .grid6 a {
+    text-align: right;
   }
 
   .buy {
@@ -813,7 +828,7 @@
 
   .footer {
     width: 100%;
-    height: 10rem;
+    height: 5rem;
     background-image: url(../images/footer.png);
     background-size: cover;
     background-position: center;
